@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  20 Jul 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Enable RC_NEED="foo" and RC_USE="bar" in /etc/conf.d/${SERVICE}
+    so that users can overlay service dependencies with their own.
+    Bug #140865
+
   19 Jul 2006; Roy Marples <uberlord@gentoo.org>:
 
     Rework dolisting and net.lo to use bash globbing instead of ls to save
